--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,16 @@ button{
   border-radius: 4px;
   color: #fff;
   font-weight: bold;
-  cursor: pointer;
+  cursor: pointer; 
   font-size: 1em;
 }
 button:hover{
   background: #c23866;
   color: #fff;
+}
+.card-grid{
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
 }
