--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 
 body{
   font-family: Raleway, sans-serif;
